Version selector: Fixed visibility issue

--- a/client/scss/components/_versions.scss
+++ b/client/scss/components/_versions.scss
@@ -40,6 +40,7 @@ $versions-bg: rgba(255, 255, 255, 0.2);
   .menu .submenu {
     border: 0;
     margin-top: 0.3em;
+    z-index: 2;
 
     li {
       background: $white;
